# materials_management

./: .gitignore  AGENTS.md  README.md  specification.md  start-dev.bat  stop-dev.bat
backend/: README.md  main.py  pyproject.toml
backend/app/: __init__.py  api.py  config.py  db.py  errors.py  quotation_paths.py  schemas.py  service.py  utils.py
backend/data_prep_tools/: README.md  extract_thorlabs_descriptions.py
backend/tests/: conftest.py  test_api_integration.py  test_quotation_paths.py  test_service_transactions.py
documents/: change_log.md  reservation_rearchitecture_rfc.md  source_current_state.md  team_onboarding.md  technical_documentation.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppShell.tsx  CatalogPicker.tsx  StatCard.tsx
frontend/src/lib/: api.ts  movementEntry.ts  previewState.ts  types.ts
frontend/src/pages/: AssembliesPage.tsx  BomPage.tsx  DashboardPage.tsx  HistoryPage.tsx  InventoryPage.tsx  ItemsPage.tsx  LocationsPage.tsx  MasterPage.tsx  OrdersPage.tsx  ProjectsPage.tsx  ReservationsPage.tsx  SnapshotPage.tsx
frontend/tests/: AppRouter.test.tsx  CatalogPicker.test.tsx  movementEntry.test.ts  previewState.test.ts
