[project]
name = "backend"
version = "0.1.0"
description = "Optical component inventory management backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pypdf>=6.7.3",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[project.scripts]
materials-backend = "main:main"
